--- a/libraries/less/github.less
+++ b/libraries/less/github.less
@@ -83,16 +83,22 @@ HTML, BODY, #layout, #sidebar, #content, #live{ height: 100%; }
   H1 { color:  #BCB2AB; margin: 3% 0px; }
 } 
 
+#live {
+  background: #FFFFFF;
+}
+
 // ------------------------------------------
 //  ARTICLES
 // ------------------------------------------
 
-.doc-content {
+
+#doc-content {
   border: 1px solid #DDD;
   border-radius: 4px;
   background-color: #fff;
   opacity: 0.9;
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
+  margin: 30px 0px;
 }
 
 .doc-sidebar {
