Remove font-face

--- a/libraries/less/github.less
+++ b/libraries/less/github.less
@@ -2,7 +2,7 @@
 @import "component.less";
 
 H1, H2, H3, H4 { font-family: 'Open Sans Condensed', sans-serif; }
-BODY { font-family: 'Open Sans Condensed', sans-serif; }
+/*BODY { font-family: 'Open Sans Condensed', sans-serif; }*/
 .OpenSansLight { 
   font-family: 'Open Sans Condensed Light', sans-serif;
   font-size: 16px;
