--- a/libraries/less/github.less
+++ b/libraries/less/github.less
@@ -78,7 +78,7 @@ HTML, BODY, #layout, #sidebar, #content, #live{ height: 100%; }
   padding: 0; 
     .wrapper {
       padding: 0px 3% 3% 3%;
-      overflow-y: scroll; height: 100%;
+      overflow-y: hidden; height: 100%;
     }
   H1 { color:  #BCB2AB; margin: 3% 0px; }
 } 
@@ -99,6 +99,9 @@ HTML, BODY, #layout, #sidebar, #content, #live{ height: 100%; }
   opacity: 0.9;
   padding: 0px 20px 20px 20px;
   margin: 30px 0px;
+  
+  overflow-y: scroll;
+  height: 100%;
 }
 
 .doc-sidebar {
