- Auto generate Table of Content - Rewrite FAQ (in french)

--- a/libraries/less/github.less
+++ b/libraries/less/github.less
@@ -121,6 +121,12 @@ HTML, BODY, #layout, #sidebar, #content, #live{ height: 100%; }
 	  -webkit-box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 	}
 	
+	.toc {
+	  LI.list-group-item{
+	    padding: 5px 10px;
+	  }
+	  H4 { padding-top: 10px; }
+	}
 
 	.nav-tabs {
 	  LI A {
@@ -138,6 +144,8 @@ HTML, BODY, #layout, #sidebar, #content, #live{ height: 100%; }
 	  border-bottom: 1px solid #E0DFDE;
 	}
 }
+
+
 
 // ------------------------------------------
 //  ARTICLES
